Bug 1495661 - reuse the default UnscaledFontDWrite for variation fonts. r=jfkthame